<resources>
    <string name="app_name">WeatherTest</string>
    <string name="temp_max">Температура макс</string>
    <string name="temp_min">Температура мин</string>
    <string name="description">Описание</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="wind">Ветер</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="error">Данные не были загружены, проверьте интернет соединение.</string>
    <string name="allert_dialog_ok_button_text">Хорошо</string>
    <string name="allert_dialog_no_location_permission">Ваше местоположение не будет учитываться при сортировке данных.</string>
    <string name="wait_dialog_message">Данные обновляются. Пожалуйста подождите.</string>
    <string name="image_dscr">weather_icon</string>
</resources>
